feat: update readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -39,16 +39,16 @@ Get the latest development version from [GitHub](https://github.com/nahid18/easy
 ```{r 'install_dev', eval = FALSE}
 BiocManager::install("nahid18/easylift")
 ```
-## Example
+## Usage
 
-This is a basic example which shows you how to solve a common problem:
-
+First, import the libraries
 ```{r library, eval = requireNamespace('easylift', 'GenomicRanges')}
 library("easylift")
 library("GenomicRanges")
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+Then, execute the code below. 
+This assumes you already downloaded the required chain file.
 
 ```{r example, eval = FALSE}
 gr <- GRanges(seqname = Rle(paste("chr", 1, sep = "")),
@@ -61,11 +61,23 @@ lifted <- easylift(gr, to, chain)
 
 ## Citation
 
-Below is the citation output from using `citation('easylift')` in R. Please
-run this yourself to check for any updates on how to cite __easylift__.
+To cite package ‘easylift’ in publications use:
 
-```{r 'citation', eval = requireNamespace('easylift')}
-print(citation('easylift'), bibtex = TRUE)
+  Al Nahid A, Love M (2023). _easylift: An R package to perform
+  genomic liftOver_. R package version 0.0.1,
+  <https://github.com/nahid18/easylift>.
+
+
+A BibTeX entry for LaTeX users is
+
+```
+  @Manual{,
+    title = {easylift: An R package to perform genomic liftOver},
+    author = {Abdullah {Al Nahid} and Michael Love},
+    year = {2023},
+    note = {R package version 0.0.1},
+    url = {https://github.com/nahid18/easylift},
+  }
 ```
 
 Please note that the `easylift` was only made possible thanks to many other R and bioinformatics software authors, which are cited either in the vignettes and/or the paper(s) describing this package.
@@ -74,16 +86,5 @@ Please note that the `easylift` was only made possible thanks to many other R an
 
 Please note that the `easylift` project is released with a [Contributor Code of Conduct](http://bioconductor.org/about/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
 
-## Development tools
-
-* Continuous code testing is possible thanks to [GitHub actions](https://www.tidyverse.org/blog/2020/04/usethis-1-6-0/)  through `r BiocStyle::CRANpkg('usethis')`, `r BiocStyle::CRANpkg('remotes')`, and `r BiocStyle::CRANpkg('rcmdcheck')` customized to use [Bioconductor's docker containers](https://www.bioconductor.org/help/docker/) and `r BiocStyle::Biocpkg('BiocCheck')`.
-* Code coverage assessment is possible thanks to [codecov](https://codecov.io/gh) and `r BiocStyle::CRANpkg('covr')`.
-* The [documentation website](http://nahid18.github.io/easylift) is automatically updated thanks to `r BiocStyle::CRANpkg('pkgdown')`.
-* The code is styled automatically thanks to `r BiocStyle::CRANpkg('styler')`.
-* The documentation is formatted thanks to `r BiocStyle::CRANpkg('devtools')` and `r BiocStyle::CRANpkg('roxygen2')`.
-
-For more details, check the `dev` directory.
-
-This package was developed using `r BiocStyle::Biocpkg('biocthis')`.
 
 
