feat: init tests

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,8 +2,6 @@
 output: github_document
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
-
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
     collapse = TRUE,
@@ -24,16 +22,6 @@ The goal of `easylift` is to perform genomic liftover given `GRanges` and `chain
 
 ## Installation
 
-<!-- Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then install `easylift` from [Bioconductor](http://bioconductor.org/) using the following code: -->
-
-<!-- ```{r 'install', eval = FALSE} -->
-<!-- if (!requireNamespace("BiocManager", quietly = TRUE)) { -->
-<!--     install.packages("BiocManager") -->
-<!-- } -->
-
-<!-- BiocManager::install("easylift") -->
-<!-- ``` -->
-
 Get the latest development version from [GitHub](https://github.com/nahid18/easylift) with:
 
 ```{r 'install_dev', eval = FALSE}
@@ -41,14 +29,13 @@ BiocManager::install("nahid18/easylift")
 ```
 ## Usage
 
-First, import the libraries
-```{r library, eval = requireNamespace('easylift', 'GenomicRanges')}
+Import the libraries
+```{r library, eval = FALSE}
 library("easylift")
 library("GenomicRanges")
 ```
 
-Then, execute the code below. 
-This assumes you already downloaded the required chain file.
+Call `easylift` with `GRanges` object, target genome and chain file.
 
 ```{r example, eval = FALSE}
 gr <- GRanges(seqname = Rle(paste("chr", 1, sep = "")),
@@ -56,6 +43,7 @@ gr <- GRanges(seqname = Rle(paste("chr", 1, sep = "")),
 genome(gr) <- "hg19"
 to <- "hg38"
 chain <- "hg19ToHg38.over.chain.gz"
+
 lifted <- easylift(gr, to, chain)
 ```
 
@@ -73,9 +61,9 @@ A BibTeX entry for LaTeX users is
 ```
   @Manual{,
     title = {easylift: An R package to perform genomic liftOver},
-    author = {Abdullah {Al Nahid} and Michael Love},
+    author = {Abdullah Al Nahid and Michael Love},
     year = {2023},
-    note = {R package version 0.0.1},
+    note = {R package version 0.0.2},
     url = {https://github.com/nahid18/easylift},
   }
 ```
