--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ genome(gr) <- "hg19"
 to <- "hg38"
 chain <- "hg19ToHg38.over.chain.gz"
 
-lifted <- easylift(gr, to, chain)
+easylift(gr, to, chain)
 ```
 
 ## Citation
@@ -52,7 +52,7 @@ lifted <- easylift(gr, to, chain)
 To cite package ‘easylift’ in publications use:
 
   Al Nahid A, Love M (2023). _easylift: An R package to perform
-  genomic liftOver_. R package version 0.0.1,
+  genomic liftOver_. R package version 0.0.2,
   <https://github.com/nahid18/easylift>.
 
 
