--- a/vignettes/easylift.Rmd
+++ b/vignettes/easylift.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "easylift"
+title: "Introduction to easylift package"
 abstract: >
   An R package to perform genomic liftover between different genome assemblies with `GRanges` and `chain` file. Source Code: https://github.com/nahid18/easylift
 author:
@@ -11,10 +11,13 @@ author:
   - Biostatistics Department, University of North Carolina-Chapel Hill, Chapel Hill, NC, USA
   - Genetics Department, University of North Carolina-Chapel Hill, Chapel Hill, NC, USA
   email: michaelisaiahlove@gmail.com
-output:
+output: 
   BiocStyle::html_document:
+    self_contained: yes
     toc: true
+    toc_float: true
     toc_depth: 2
+    code_folding: show
 vignette: >
   %\VignetteIndexEntry{easylift}
   %\VignetteEngine{knitr::rmarkdown}
