feat: minor update

--- a/README.Rmd
+++ b/README.Rmd
@@ -52,7 +52,7 @@ easylift(gr, to, chain)
 To cite package ‘easylift’ in publications use:
 
   Al Nahid A, Love M (2023). _easylift: An R package to perform
-  genomic liftOver_. R package version 0.0.3,
+  genomic liftover_. R package version 0.0.4,
   <https://github.com/nahid18/easylift>.
 
 
@@ -60,10 +60,10 @@ A BibTeX entry for LaTeX users is
 
 ```
   @Manual{,
-    title = {easylift: An R package to perform genomic liftOver},
+    title = {easylift: An R package to perform genomic liftover},
     author = {Abdullah Al Nahid and Michael Love},
     year = {2023},
-    note = {R package version 0.0.3},
+    note = {R package version 0.0.4},
     url = {https://github.com/nahid18/easylift},
   }
 ```
