--- a/vignettes/easylift.Rmd
+++ b/vignettes/easylift.Rmd
@@ -1,23 +1,21 @@
 ---
-title: "Introduction to easylift package"
+title: "Introduction to easylift"
 abstract: >
-  An R package to perform genomic liftover between different genome assemblies with `GRanges` and `chain` file. Source Code: https://github.com/nahid18/easylift
+  An R/Bioconductor library to perform genomic liftover between different genome assemblies with `GRanges` and `chain` file. Source Code: https://github.com/nahid18/easylift
 author:
-- name: Abdullah Al Nahid
-  affiliation: 
-  - Department of Biochemistry and Molecular Biology, Shahjalal University of Science and Technology, Sylhet-3114, Bangladesh
-- name: Michael I. Love
-  affiliation: 
-  - Biostatistics Department, University of North Carolina-Chapel Hill, Chapel Hill, NC, USA
-  - Genetics Department, University of North Carolina-Chapel Hill, Chapel Hill, NC, USA
-  email: michaelisaiahlove@gmail.com
-output: 
-  BiocStyle::html_document:
+- Abdullah Al Nahid^[Department of Biochemistry and Molecular Biology, Shahjalal University of Science and Technology, Sylhet-3114, Bangladesh]
+- Michael I. Love^[Biostatistics Department, University of North Carolina-Chapel Hill, Chapel Hill, NC, USA, Genetics Department, University of North Carolina-Chapel Hill, Chapel Hill, NC, USA]
+date: "`r format(Sys.time(), '%d %B %Y')`"
+output:
+  pdf_document:
+    toc: true
+    toc_depth: 2
+    latex_engine: xelatex
+  html_document:
     self_contained: yes
     toc: true
     toc_float: true
     toc_depth: 2
-    code_folding: show
 vignette: >
   %\VignetteIndexEntry{easylift}
   %\VignetteEngine{knitr::rmarkdown}
@@ -86,17 +84,17 @@ gr |> easylift("hg38")
 To cite package ‘easylift’ in publications use:
 
   Al Nahid A, Love M (2023). _easylift: An R package to perform
-  genomic liftOver_. R package version 0.0.3,
+  genomic liftover_. R package version 0.0.4,
   https://github.com/nahid18/easylift.
 
 A BibTeX entry for LaTeX users is
 
 ```
   @Manual{,
-    title = {easylift: An R package to perform genomic liftOver},
+    title = {easylift: An R package to perform genomic liftover},
     author = {Abdullah Al Nahid and Michael Love},
     year = {2023},
-    note = {R package version 0.0.3},
+    note = {R package version 0.0.4},
     url = {https://github.com/nahid18/easylift},
   }
 ```
