feat: minor updates

--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,7 @@ library("GenomicRanges")
 Call `easylift` with `GRanges` object, target genome and chain file.
 
 ```{r example, eval = FALSE}
-gr <- GRanges(seqname = Rle(paste("chr", 1, sep = "")),
+gr <- GRanges(seqname = Rle(c("chr1", "chr2"), c(100000, 100000)),
               ranges = IRanges(start = 1, end = 200000))
 genome(gr) <- "hg19"
 to <- "hg38"
@@ -52,7 +52,7 @@ easylift(gr, to, chain)
 To cite package ‘easylift’ in publications use:
 
   Al Nahid A, Love M (2023). _easylift: An R package to perform
-  genomic liftover_. R package version 0.0.4,
+  genomic liftover_. R package version 0.0.5,
   <https://github.com/nahid18/easylift>.
 
 
@@ -63,7 +63,7 @@ A BibTeX entry for LaTeX users is
     title = {easylift: An R package to perform genomic liftover},
     author = {Abdullah Al Nahid and Michael Love},
     year = {2023},
-    note = {R package version 0.0.4},
+    note = {R package version 0.0.5},
     url = {https://github.com/nahid18/easylift},
   }
 ```
