--- a/README.Rmd
+++ b/README.Rmd
@@ -68,10 +68,10 @@ easylift(gr, "hg38")
 
 ## Citation
 
-To cite package ‘easylift’ in publications use:
+To cite package `easylift` in publications use:
 
   Al Nahid A, Love M (2023). _easylift: An R package to perform
-  genomic liftover_. R package version 0.99.5,
+  genomic liftover_. R package version 0.99.6,
   <https://github.com/nahid18/easylift>.
 
 
@@ -82,7 +82,7 @@ A BibTeX entry for LaTeX users is
     title = {easylift: An R package to perform genomic liftover},
     author = {Abdullah Al Nahid and Michael Love},
     year = {2023},
-    note = {R package version 0.99.5},
+    note = {R package version 0.99.6},
     url = {https://github.com/nahid18/easylift},
   }
 ```
