--- a/README.Rmd
+++ b/README.Rmd
@@ -78,8 +78,8 @@ gr |> easylift("hg38")
 
 To cite package `easylift` in publications use:
 
-  Al Nahid A, Love M (2023). _easylift: An R package to perform
-  genomic liftover_. R package version 0.99.93,
+  Al Nahid A, Pagès H, Love M (2023). _easylift: An R package to perform
+  genomic liftover_. R package version 0.99.95,
   <https://github.com/nahid18/easylift>.
 
 
@@ -88,9 +88,9 @@ A BibTeX entry for LaTeX users is
 ```
   @Manual{,
     title = {easylift: An R package to perform genomic liftover},
-    author = {Abdullah Al Nahid and Michael Love},
+    author = {Abdullah Al Nahid, Hervé Pagès, Michael Love},
     year = {2023},
-    note = {R package version 0.99.93},
+    note = {R package version 0.99.95},
     url = {https://github.com/nahid18/easylift},
   }
 ```
