--- a/vignettes/easylift.Rmd
+++ b/vignettes/easylift.Rmd
@@ -101,7 +101,7 @@ gr |> easylift("hg38")
 
 To cite package `easylift` in publications use:
 
-  Al Nahid A, Love M (2023). _easylift: An R package to perform
+  Al Nahid A, Pagès H, Love M (2023). _easylift: An R package to perform
   genomic liftover_. R package version 0.0.4,
   https://github.com/nahid18/easylift.
 
@@ -110,7 +110,7 @@ A BibTeX entry for LaTeX users is
 ```
   @Manual{,
     title = {easylift: An R package to perform genomic liftover},
-    author = {Abdullah Al Nahid and Michael Love},
+    author = {Abdullah Al Nahid, Hervé Pagès, Michael Love},
     year = {2023},
     note = {R package version 0.0.4},
     url = {https://github.com/nahid18/easylift},
